--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mapEntries",
-  "version": "0.0.0",
+  "name": "map-entries",
+  "version": "0.0.1",
   "description": "",
   "main": "./dist/index.js",
   "scripts": {
