--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "map-entries",
   "version": "0.0.1",
-  "description": "",
+  "description": "Array.map() for objects",
   "main": "./dist/index.js",
   "scripts": {
     "build": "babel index.js --out-file ./dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm version"
   },
   "keywords": [
     "map",
